I FIXED THE WHITESPACE!!!!

--- a/template.css
+++ b/template.css
@@ -21,6 +21,7 @@ nav>ul {
     height: 5vh;
     width: 100vw;
     overflow: hidden;
+    margin: 0;
 }
 
 nav>ul>li {
